[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-tracker"
version = "1.0.0"
description = "Comprehensive protein structure data management and evaluation platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jing0715", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["pdb", "protein", "structure", "cryoem", "xray", "nmr", "bioinformatics"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "flask>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
]
web = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]

[project.scripts]
pdb-tracker = "pdb_tracker.cli:main"
pdb-weekly = "pdb_tracker.weekly.cli:main"
target-evaluation = "pdb_tracker.evaluation.cli:main"

[project.urls]
Homepage = "https://github.com/Jing0715-fer/pdb-tracker"
Documentation = "https://github.com/Jing0715-fer/pdb-tracker#readme"
Repository = "https://github.com/Jing0715-fer/pdb-tracker.git"
Issues = "https://github.com/Jing0715-fer/pdb-tracker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdb_tracker.web" = ["static/*", "templates/*"]
"pdb_tracker.templates" = ["*.md", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
